bitfield/tests/04-multiple-of-8bits.stderr
error[E0277]: the trait bound `std::marker::PhantomData<[(); 7]>: bitfield::checks::TotalSizeIsMultipleOfEightBits` is not satisfied
  --> $DIR/04-multiple-of-8bits.rs:53:1
   |
53 | #[bitfield]
   | ^^^^^^^^^^^ the trait `bitfield::checks::TotalSizeIsMultipleOfEightBits` is not implemented for `std::marker::PhantomData<[(); 7]>`
   |
  ::: $WORKSPACE/bitfield/src/lib.rs:21:69
   |
21 |     pub trait CheckTotalSizeIsMultipleOfEightBits where Self::Size: TotalSizeIsMultipleOfEightBits {
   |                                                                     ------------------------------ required by this bound in `bitfield::checks::CheckTotalSizeIsMultipleOfEightBits`
   |
   = help: the following implementations were found:
             <std::marker::PhantomData<[(); 0]> as bitfield::checks::TotalSizeIsMultipleOfEightBits>
   = note: this error originates in an attribute macro (in Nightly builds, run with -Z macro-backtrace for more info)
